# Monsters-Hotel

./: CMakeLists.txt  main.cpp
Properties/: HotelProperties.cpp  HotelProperties.h
Users/: Guest.cpp  Guest.h  Human.cpp  Human.h  Monster.cpp  Monster.h  Receptionist.cpp  Receptionist.h  User.cpp  User.h
